fix: Fix JVM argument parsing for Hotswap Agent launch
Changed from array-based to string-based JVM argument handling to
prevent Eclipse from incorrectly splitting --add-opens arguments.
Eclipse was treating the second part of arguments like
"--add-opens=java.base/java.lang.reflect=ALL-UNNAMED" as the main class.

Changes:
- Added getHotswapJvmArgsString() method that returns properly formatted string
- Uses space-separated format: "--add-opens java.base/java.lang=ALL-UNNAMED"
- Updated HotswapLaunchConfigurationDelegate to use string method
- Updated HotswapLaunchShortcut to use string method
- Deprecated the array-based getHotswapJvmArgs() method

This fixes the "ClassNotFoundException: java.base.java.lang.reflect=ALL-UNNAMED" error.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>